create github pages

--- a/page5.html
+++ b/page5.html
@@ -19,7 +19,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-12" data-rv-view="707">
+  <section id="dropdown-menu-12" data-rv-view="168">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-section mbr-after-navbar" id="header3-14" data-rv-view="709">
+<section class="engine"><a href="https://mobirise.ws/k">how to develop free website</a></section><section class="mbr-section mbr-after-navbar" id="header3-14" data-rv-view="170">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -53,7 +53,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-15" data-rv-view="711">
+<section class="mbr-section" id="content1-15" data-rv-view="172">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>Aside from the fact that playing a musical instrument is fun, stress relief is an advantage to taking music class. Studies show that playing an instrument lowers down heart rate and blood pressure, leading to lower stress hormone cortisol, thus making us relaxed. Many people get caught up with school assignments and projects that they forget to relax. Playing instruments will not only relieve tension from your back, but also give a variety of benefits.</p><p><br></p><p>Furthermore, taking music classes will-oddly enough-make you smarter. In a study conducted by the University of South Florida, adults of age 60-85 were given piano lessons and were concluded to have improved memory, verbal fluency, information processing skills, hand-eye coordination skills and more cognitive functions six months later. As for students, ones who took music class earned better SAT scores than those who didn’t.</p><p><br></p><p>Another advantage to learning music is emotional development. Listening to music enables you to have more empathy towards people, which makes it easier for you to connect to others. You can also always break the ice by talking about your favorite songs, artists and bands.</p><p><br></p><p>Moreover, it’s been proven that playing instruments foster creativity. Doing the same routine everyday results in the loss of creativity. Music lets you “look beyond what currently exists and express yourself in a new way,” according to Paul Allen, co-founder of Microsoft. Enhancing creativity allows you to think outside the box and be more imaginative. This will then prepare you for future jobs as companies like employees with fresh, new ideas and more artistic careers are open in today’s economy.</p><p><br></p></div>
@@ -61,7 +61,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-13" data-rv-view="708" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-13" data-rv-view="173" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
