--- a/page2.html
+++ b/page2.html
@@ -21,7 +21,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-h" data-rv-view="46">
+  <section id="dropdown-menu-h" data-rv-view="27">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -44,7 +44,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/h">make own website</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-j" data-rv-view="48" style="background-color: rgb(76, 105, 114);">
+<section class="engine"><a href="https://mobirise.ws/l">free html website creator</a></section><section class="mbr-gallery mbr-section mbr-section--no-padding mbr-after-navbar" id="gallery1-j" data-rv-view="29" style="background-color: rgb(76, 105, 114);">
     <!-- Gallery -->
     <div class=" mbr-gallery-layout-default">
         <div>
@@ -166,7 +166,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-i" data-rv-view="47" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-i" data-rv-view="64" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
