--- a/page7.html
+++ b/page7.html
@@ -19,7 +19,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-1j" data-rv-view="958">
+  <section id="dropdown-menu-1j" data-rv-view="186">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/l">free html web creator</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-1l" data-rv-view="960" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.ws/c">best free site maker</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-1l" data-rv-view="188" style="background-color: rgb(255, 255, 255);">
     <div>
         
         <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 93px;">
@@ -76,7 +76,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-1k" data-rv-view="959" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-1k" data-rv-view="197" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
