--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/b">best web site creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-5" data-rv-view="7" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
+<section class="engine"><a href="https://mobirise.ws/p">open source website creator</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-5" data-rv-view="7" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
@@ -105,7 +105,7 @@
     <div class="mbr-section__container container mbr-section__container--last" style="padding-bottom: 93px;">
         <div class="row">
             <div class="col-sm-8 col-sm-offset-2">
-                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="https://mobirise.com">LEARN MORE</a></div>
+                <div class="mbr-buttons mbr-buttons--center btn-inverse"><a class="mbr-buttons__btn btn btn-lg btn-default" href="page5.html">LEARN MORE</a></div>
             </div>
         </div>
     </div>
