--- a/page7.html
+++ b/page7.html
@@ -34,7 +34,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
 
         </div>
 
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/g">how to create your own website</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-1l" data-rv-view="188" style="background-color: rgb(255, 255, 255);">
+<section class="engine"><a href="https://mobirise.ws/m">drag and drop site builder</a></section><section class="mbr-section mbr-section--relative mbr-section--fixed-size mbr-after-navbar" id="testimonials1-1l" data-rv-view="188" style="background-color: rgb(255, 255, 255);">
     <div>
         
         <div class="mbr-section__container mbr-section__container--std-padding container" style="padding-top: 93px; padding-bottom: 0px;">
