--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
 
         </div>
 
@@ -43,8 +43,8 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/i">build own website</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background mbr-after-navbar" id="header4-5" data-rv-view="7" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
-    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left">
+<section class="engine"><a href="https://mobirise.ws">Mobirise</a></section><section class="mbr-box mbr-section mbr-section--relative mbr-section--fixed-size mbr-section--full-height mbr-section--bg-adapted mbr-parallax-background" id="header4-5" data-rv-view="7" style="background-image: url(assets/images/p1000427-1999x1501.jpg);">
+    <div class="mbr-box__magnet mbr-box__magnet--sm-padding mbr-box__magnet--center-left mbr-after-navbar">
         
         <div class="mbr-box__container mbr-section__container container">
             <div class="mbr-box mbr-box--stretched"><div class="mbr-box__magnet mbr-box__magnet--center-left">
@@ -111,7 +111,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-1r" data-rv-view="565">
+<section class="mbr-section" id="content1-1r" data-rv-view="13">
     <div class="mbr-section__container container mbr-section__container--isolated">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p><strong>WEBSITE BUILT BY&nbsp;</strong></p><p>Angeline Janice<strong> (10B)</strong></p><p>Ashley Tebiono <strong>(10A)</strong></p><p>Auriel Shinetau<strong> (10B)</strong></p><p>Joey Chance<strong> (10B)</strong></p><p>Tracy Sastraatmaja<strong> (10B)</strong></p><p>Tara Natalia <strong>(10B)</strong></p></div>
@@ -119,7 +119,7 @@
     </div>
 </section>
 
-<figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom" id="map1-7" data-rv-view="13">
+<figure class="mbr-figure mbr-figure--wysiwyg mbr-figure--full-width mbr-figure--caption-outside-bottom" id="map1-7" data-rv-view="14">
     <div class="mbr-figure__map"><iframe frameborder="0" style="border:0" src="https://www.google.com/maps/embed/v1/place?key=AIzaSyA0Dx_boXQiwvdz8sJHoYeZNVTdoWONYkU&amp;q=place_id:ChIJQQ_Zy5f3aS4RY_9ETp7VRW4" allowfullscreen=""></iframe></div>
 </figure>
 
