--- a/page5.html
+++ b/page5.html
@@ -19,7 +19,7 @@
   
 </head>
 <body>
-  <section id="dropdown-menu-12" data-rv-view="168">
+  <section id="dropdown-menu-12" data-rv-view="138">
 
     <nav class="navbar navbar-dropdown transparent navbar-fixed-top bg-color">
 
@@ -34,7 +34,7 @@
                 <div class="hamburger-icon"></div>
             </button>
 
-            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="http://forums.mobirise.com/">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
+            <ul class="nav-dropdown collapse pull-xs-right navbar-toggleable-sm nav navbar-nav" id="exCollapsingNavbar"><li class="nav-item dropdown"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">FEATURES</a><div class="dropdown-menu"><a class="dropdown-item" href="page2.html">About the Program</a><a class="dropdown-item" href="page1.html">About the Teacher</a><div class="dropdown"><a class="dropdown-item dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="false">Musicals</a><div class="dropdown-menu dropdown-submenu"><a class="dropdown-item" href="page3.html">Mamma Mia!</a><a class="dropdown-item" href="page4.html">Sound of Music</a></div></div><a class="dropdown-item" href="https://mobirise.com/"></a><a class="dropdown-item" href="page5.html" aria-expanded="false">Why Music?</a></div></li><li class="nav-item dropdown open"><a class="nav-link link dropdown-toggle" data-toggle="dropdown-submenu" href="https://mobirise.com/" aria-expanded="true">HELP</a><div class="dropdown-menu"><a class="dropdown-item" href="page7.html">Forum (Opinions)</a><a class="dropdown-item" href="page6.html">Contact us</a></div></li></ul>
 
         </div>
 
@@ -42,7 +42,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.ws/e">best website builder software</a></section><section class="mbr-section mbr-after-navbar" id="header3-14" data-rv-view="170">
+<section class="engine"><a href="https://mobirise.ws/n">mobile website creator app</a></section><section class="mbr-section mbr-after-navbar" id="header3-14" data-rv-view="140">
     <div class="mbr-section__container container mbr-section__container--first">
         <div class="mbr-header mbr-header--wysiwyg row">
             <div class="col-sm-8 col-sm-offset-2">
@@ -53,7 +53,7 @@
     </div>
 </section>
 
-<section class="mbr-section" id="content1-15" data-rv-view="172">
+<section class="mbr-section" id="content1-15" data-rv-view="142">
     <div class="mbr-section__container container mbr-section__container--last">
         <div class="row">
             <div class="mbr-article mbr-article--wysiwyg col-sm-8 col-sm-offset-2"><p>Aside from the fact that playing a musical instrument is fun, stress relief is one reason why you should join music class. Studies show that playing an instrument lowers down heart rate and blood pressure, leading to lower stress hormone cortisol, thus making us relaxed. Many people get caught up with school assignments and projects that they forget to relax. Playing instruments will not only relieve tension from your back, but also give a variety of benefits.</p><p><br></p><p>Surprisingly, learning music will also make you smarter. In a study conducted by the University of South Florida, adults of age 60-85 were given piano lessons and were concluded to have improved memory, verbal fluency, information processing skills, hand-eye coordination skills and more cognitive functions six months later. As for students, ones who took music class earned better SAT scores than those who didn’t. Worried you aren’t smart enough? Join music class!</p><p><br></p><p>Music has also been shown to grow your emotional development. Listening to music enables you to have more empathy towards people, making it easier for you to connect to others and meet lots of friends! You can always break the ice by talking about your favorite songs, artists and bands. What’s better than having friends with the same music taste as yours? Nothing.</p><p><br></p><p>It’s been proven that playing instruments improves creativity. Doing the same routine everyday is boring. Go to school. Go home. Repeat. It legitimately makes you lose touch of creativity. Music lets you “look beyond what currently exists and express yourself in a new way,” according to Paul Allen, co-founder of Microsoft. Enhancing creativity helps you to think outside the box and be more imaginative. Nobody likes a square!</p><p><br></p><p>So, what are you waiting for? Join music class now!</p><p><br></p><p><br></p></div>
@@ -61,7 +61,7 @@
     </div>
 </section>
 
-<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-13" data-rv-view="173" style="background-color: rgb(255, 255, 255);">
+<section class="mbr-section mbr-section--relative mbr-section--fixed-size" id="contacts1-13" data-rv-view="143" style="background-color: rgb(255, 255, 255);">
     
     <div class="mbr-section__container container">
         <div class="mbr-contacts mbr-contacts--wysiwyg row" style="padding-top: 45px; padding-bottom: 45px;">
